Bug 1608246 - Fixes for small subdialogs in preferences r=bgrins
Bug 1588142 introduced two problems: First, it added CSS to prefrences.css that was meant to apply only to preferences.xhtml, but in fact ends up applying to other pages. This patch fixes that.

The second problem was an assumption made in subdialogs.js that all preferences subdialogs would have either a contentPane or a <dialog> element, which we should set to be scrollable if the window is too small. It turns out that there is at least one dialog that has overflow-y set to auto, thus handling it's own scrolling. The relevant code has been updated not to make that assumption.

Differential Revision: https://phabricator.services.mozilla.com/D60057

UltraBlame original commit: df97ae305b64f377a84c88e886d6ed4790c07c09

--- a/browser/themes/shared/incontentprefs/preferences.inc.css
+++ b/browser/themes/shared/incontentprefs/preferences.inc.css
@@ -102,12 +102,6 @@ grey
 20
 )
 ;
-text
--
-rendering
-:
-optimizeLegibility
-;
 }
 supports
 -
@@ -168,8 +162,25 @@ a30
 }
 }
 }
-:
+#
+preferences
+-
 root
+{
+text
+-
+rendering
+:
+optimizeLegibility
+;
+}
+#
+preferences
+-
+root
+#
+preferences
+-
 body
 {
 margin
